# CircuitSimulation2.1

./: .gitignore  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  uvicorn_log.txt
backend/alembic/: env.py
backend/alembic/versions/: b6ab12249bd8_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: playground.py  runs.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  artifact.py  candidate.py  iteration.py  message.py  netlist.py  playground.py  run.py  simulation.py
backend/app/schemas/: chat.py  common.py  playground.py  runs.py
backend/app/services/analysis/: graph_recommender.py  metrics.py  parser.py  signal_extractor.py
backend/app/services/netlist/: validator.py
backend/app/services/openai/: chat.py  client.py  prompts.py  tasks.py
backend/app/services/optimization/: loop.py
backend/app/services/playground/: canvas_to_netlist.py
backend/app/services/simulation/: mock_runner.py  runner.py
backend/app/tasks/: monte_carlo.py  orchestration.py  simulation.py
backend/app/utils/: files.py  ids.py
backend/app/workers/: celery_app.py
backend/docker/: Dockerfile.api  Dockerfile.worker  Dockerfile.xyce
backend/tests/: conftest.py  test_netlist_validator.py  test_playground_api.py  test_runs_api.py
data/: componentLibrary.ts  mockPlayground.ts  mockRun.ts  mockRunsList.ts
(+47 files in other folders)
