[build-system]
requires = ["setuptools>=70", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "circuitai-backend"
version = "0.1.0"
description = "CircuitAI — AI-Powered Analog Circuit Design Backend"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=1.8.2",

    # Database / ORM
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Pydantic
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",

    # Redis / Celery
    "celery[redis]>=5.3.6",
    "redis>=5.0.4",
    "kombu>=5.3.4",

    # OpenAI
    "openai>=1.25.0",
    "tenacity>=8.3.0",

    # Docker
    "docker>=7.0.0",

    # Parsing / utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "uuid6>=2024.1.12",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.3.0",
    "factory-boy>=3.3.0",
    "respx>=0.21.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
